# fantoccini_on_axum

./: .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml
.cargo/: config.toml
src/: main.rs
src/handlers/crawling_handlers/: kepco.rs  pp_kepco.rs
src/handlers/legacy_kepco/: kepco.rs  pp_kepco.rs
src/handlers/legacy_kepco_handlers/: kepco.rs  pp_kepco.rs
src/handlers/pp/: commons.rs  user_info.rs
src/models/common_response/: common_response_models.rs
src/models/driver/: chromes.rs
src/models/error/: response_errors.rs  response_errors_def.rs
src/models/error_responses/: errors.rs  errors_def.rs
src/models/handler/legacy_kepco/: kepco_models.rs  pp_models.rs
src/models/handler/pp/: commons.rs  user_info.rs
src/models/handler_models/crawling_models/: kepco_models.rs  pp_kepco_models.rs  pp_models.rs
src/models/response/: commons.rs
src/server_init/: server_init.rs
src/utils/: drivers.rs
