[package]
name = "crawling_on_axum"
version = "0.0.40"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
panic = "unwind"

[dependencies]
#web framework and request lib
axum = { version = "0.7.7", default-features = false, features = [
    "form",
    "http1",
    "json",
    "matched-path",
    "original-uri",
    "query",
    "tokio",
    "tower-log",
    "tracing",
    "macros",
    "ws",
    "multipart",
] } #is the web framework
tokio = { version = "1.41.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "process",
] } #is the async framework that is the runtime for axum

#serialziation/deserialization/file format handg
serde = "1.0.213"
serde_json = "1.0.132"
serde_derive = "1.0.213"

#time
chrono = { version = "0.4.38", features = ["serde"] }

#concurrency and async
dashmap = { version = "6.1.0", features = ["inline"] }
futures = "0.3.31"

#env loading
dotenvy = "0.15.7"

#error handling
anyhow = "1.0.91"

#crawling
fantoccini = "0.21.2"

#regex
regex = "1.11.1"