[package]
name = "crawling_on_axum"
version = "0.0.41"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
panic = "unwind"

[dependencies]
#web framework and request lib
axum = { version = "0.8.4", default-features = false, features = [
    "form",
    "http1",
    "json",
    "matched-path",
    "original-uri",
    "query",
    "tokio",
    "tower-log",
    "tracing",
    "macros",
    "ws",
    "multipart",
] } #is the web framework
tokio = { version = "1.46.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "process",
] } #is the async framework that is the runtime for axum

#serialziation/deserialization/file format handg
serde = "1.0.219"
serde_json = "1.0.140"
serde_derive = "1.0.219"

#time
chrono = { version = "0.4.41", features = ["serde"] }

#concurrency and async
dashmap = { version = "6.1.0", features = ["inline"] }
futures = "0.3.31"

#env loading
dotenvy = "0.15.7"

#error handling
anyhow = "1.0.98"

#crawling
fantoccini = "0.22.0"

#regex
regex = "1.11.1"
tempfile = "3.20.0"